Fix dark mode styling for diff comment tooltips.
When hovering over the diff comments on the left of the diff viewer, the
comment preview was showing white on green or white on blue, instead of
black. Same with the save notification bubble when saving or deleting a
comment. This was due to inheriting the default text color on dark mode.

We now force the text color to be an on-light color.

Testing Done:
Tested comment previews and save notifications in both light and dark
mode.

Reviewed at https://reviews.reviewboard.org/r/13822/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -2386,6 +2386,7 @@
 .tooltip {
   background-color: #fef6b3;
   border: 1px #a58600 solid;
+  color: var(--ink-p-text-on-light-color);
   padding: 4px;
   position: absolute;
   max-width: 60em;
@@ -2450,6 +2451,7 @@
   background-color: white;
   border: 1px black solid;
   border-radius: 8px;
+  color: var(--ink-p-text-on-light-color);
   font-size: 10pt;
   font-weight: bold;
   padding: 6px;
